--- a/theme/src/layout/layout_vgrid.less
+++ b/theme/src/layout/layout_vgrid.less
@@ -83,6 +83,10 @@ html {
     text-align: center;
 }
 
+.site-footer p {
+    margin-top: @magicNumber;
+}
+
 //Main
 
 article,
